fixed alignment by removing --bs-gutter-x for small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,10 @@ main {
 		padding: 1.5em;
 	}
 
+	.row {
+		--bs-gutter-x: 0;
+	}
+
 }
 
 /* ---------------------- */
@@ -333,6 +337,7 @@ main {
 /* ---------------------- */
 footer {
 	padding: 5em;
+	max-width: 100vw;
 }
 
 @media (max-width: 768px) {
